--- a/riot_app/pubspec.yaml
+++ b/riot_app/pubspec.yaml
@@ -11,10 +11,11 @@ dependencies:
   flutter:
     sdk: flutter
   http: ^1.2.2
-  cupertino_icons: ^1.0.6
   flutter_svg: ^2.0.10+1
-  connectivity_plus: ^6.0.3
   shared_preferences: ^2.0.7
+  flutter_dotenv: ^5.0.2
+  connectivity_plus: ^6.0.3
+  flutter_secure_storage: ^8.0.0 
 
 dev_dependencies:
   flutter_test:
@@ -23,14 +24,9 @@ dev_dependencies:
 
 flutter:
   uses-material-design: true
-
   assets:
-   - assets/icons/skull.svg
-   - assets/icons/titleIcon.svg
-   - assets/icons/valorant.png
-   - assets/icons/fortnite.jpg
-   - assets/icons/warzone.png
-   - assets/icons/apex.jpg
+    - assets/icons/skull.svg
+    - assets/icons/titleIcon.svg
 
   fonts:
     - family: NuevaFuente
