--- a/riot_app/pubspec.yaml
+++ b/riot_app/pubspec.yaml
@@ -21,12 +21,22 @@ dev_dependencies:
   flutter_test:
     sdk: flutter
   flutter_lints: ^4.0.0
+  flutter_launcher_icons: ^0.9.2
+
+flutter_icons:
+  android: true
+  ios: true
+  image_path: "assets/icons/titleIcon.png"  
+  adaptive_icon_background: "#FFFFFF"     
+  adaptive_icon_foreground: "assets/icons/app_icon.png"
 
 flutter:
   uses-material-design: true
   assets:
     - assets/icons/skull.svg
     - assets/icons/titleIcon.svg
+    - assets/icons/app_icon.png 
+    - assets/fonts/Arbutus-Regular.ttf
 
   fonts:
     - family: NuevaFuente
